--- a/.github/workflows/packer-validate.yml
+++ b/.github/workflows/packer-validate.yml
@@ -25,4 +25,11 @@ jobs:
       - name: Run Packer validate
         id: packer-validate
         run: |
-          packer validate .
+          packer validate \
+          -var "jenkins_admin_user=${{ secrets.JENKINS_ADMIN_USER }}" \
+          -var "jenkins_admin_password=${{ secrets.JENKINS_ADMIN_PASSWORD }}" \
+          -var "dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
+          -var "dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
+          -var "github_username=${{ secrets.GIT_USERNAME }}" \
+          -var "github_token=${{ secrets.GIT_TOKEN }}" \
+          .
